# auth0-rust-cf-worker

./: .gitignore  Cargo.toml  README.md  wrangler.toml
src/: auth.rs  lib.rs  rand.rs  routes.rs  state.rs
