[package]
name = "rworker"
version = "0.1.0"
authors = ["Allan Calix <allan@acx.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.4"
wasm-bindgen = "0.2"
reqwest = { version = "0.11", features = ["json"] }
serde = "1"
serde_json = "1.0.67"
cookie =  "0.15"
jsonwebtoken = "7"
sha2 = "0.9.8"
base64 = "0.13.0"
thiserror = "1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
